--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "lint:eslint": "eslint \"src/**/*.{css,js}\""
   },
   "devDependencies": {
-    "astro": "^1.0.0",
+    "astro": "^2.1.3",
     "eslint": "^8.18.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.8.0"
   },
   "dependencies": {
-    "cypress": "^10.0.3"
+    "@astrojs/solid-js": "^2.1.0",
+    "cypress": "^10.0.3",
+    "solid-js": "^1.6.14"
   }
 }
