--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "types": [
       "vite/client"
     ],
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
