--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier-plugin-astro": "^0.8.0"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.1.0",
     "@astrojs/react": "^2.1.0",
     "@astrojs/solid-js": "^2.1.0",
     "@emotion/react": "^11.10.6",
@@ -31,6 +32,7 @@
     "@types/react-dom": "^18.0.6",
     "cypress": "^10.0.3",
     "nanostores": "^0.7.4",
+    "preact": "^10.6.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "solid-js": "^1.6.14"
